--- a/templates/base.html
+++ b/templates/base.html
@@ -83,12 +83,12 @@
         });
         WebFont.load({
           google: {
-            families: ['Noto Sans Samaritan'],
+            families: ['Noto Sans Samaritan']
           }
         });
         WebFont.load({
           google: {
-            families: ['Cardo'],
+            families: ['Cardo']
           }
         });
     </script>
