static(modals): css modal changes.

--- a/templates/messages/2022-08-25-Elul-sustainer-modal.html
+++ b/templates/messages/2022-08-25-Elul-sustainer-modal.html
@@ -63,7 +63,8 @@
     }
 
 </style>
-<div id="highHolidayDonation" style="font-weight: bold">
+
+<div id="highHolidayDonation">
 
     <p>
         <span class="int-en">Friend,</span>
@@ -73,8 +74,9 @@
     <p>
         <span class="int-en">
             During the month of Elul, we’re asked to reflect upon our personal commitments and dedicate ourselves to the way we want to live in the year ahead.
-            If study and learning are part of your plans for 5783, please become a Sefaria Sustainer today. Monthly donations are essential to ensuring that Sefaria continues to serve your learning needs.
-        </span>
+        <b class="int-en">If study and learning are part of your plans for 5783, please become a Sefaria Sustainer today.</b>
+        Monthly donations are essential to ensuring that Sefaria continues to serve your learning needs.</span>
+
         <span class="int-he">
 בחודש אלול אנחנו מתבקשים להרהר במחויבויות האישיות שלנו ולהשקיע את עצמנו באופן שבו אנו רוצים לחיות בשנה הקרובה.
             אם לימוד ולמידה הם חלק מתכניותיכם עבור תשפ"ג, התחייבו היום לתרומה חודשית קבועה.
@@ -82,7 +84,7 @@
     </p>
     <div class="buttons">
         <a class="button int-en" target="_blank" href="https://sefaria.nationbuilder.com/sustainers_e">
-            <span class="int-en">BECOME A SUSTAINER</span>
+            <span class="int-en"  style="font-weight: bold">BECOME A SUSTAINER</span>
         </a>
         <a class="button int-he" target="_blank" href="https://sefaria.nationbuilder.com/sustainers_e">
             <span class="int-he">לתרומה חודשית קבועה</span>
