static(team): Team page update #1

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -300,7 +300,7 @@
                                 <span class="int-en">Israel Tsadok</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Education and Engagement Contractor</span>
+                                <span class="int-en">Education and Engagement Associate</span>
                             </div>
                         </div>
                     </div>
