static(team): Team page update #2

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -98,6 +98,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/justin.png' %}" alt="Headshot of Justin Goldstein">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Justin Goldstein</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Learning and Engagement Associate</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/rachel-g.png' %}" alt="Headshot of Rachel Grossman">
                         </div>
                         <div class="teamMemberDetails">
