--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -43,6 +43,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/justin.png' %}" alt="Headshot of Justin Goldstein">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">ג'סטין גולדשטיין</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">רכז לענייני לימוד וקהילה</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/yishai.png' %}" alt="Headshot of Yishai Glasner">
                         </div>
                         <div class="teamMemberDetails">
