static(team): Team page fix

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -313,7 +313,7 @@
                                 <span class="int-en">Israel Tsadok</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Education and Engagement Associate</span>
+                                <span class="int-en">Education and Engagement Associate (Israel)</span>
                             </div>
                         </div>
                     </div>
@@ -365,7 +365,7 @@
                                 <span class="int-en">Hedva Yechieli</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Education Coordinator Israel</span>
+                                <span class="int-en">Education Coordinator (Israel)</span>
                             </div>
                         </div>
                     </div>
