--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -273,7 +273,7 @@
                                 <span class="int-he">ישראל צדוק</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכז תוכן וקשרי חוץ</span>
+                                <span class="int-he">רכז חינוך וקהילה ישראל</span>
                             </div>
                         </div>
                     </div>
