static(team): Team page update #3

--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -368,6 +368,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/hadara.png' %}" alt="Headshot of Hadara Steinberg">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">הדרה שטיינברג</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">מנהלת פרוייקטים</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="teamMember placeholder"></div>
                     <div class="teamMember placeholder"></div>
                 </section>
