--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -306,6 +306,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/hadara.png' %}" alt="Headshot of Hadara Steinberg">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Hadara Steinberg</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Project Manager</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/israel.png' %}" alt="Headshot of Israel Tsadok">
                         </div>
                         <div class="teamMemberDetails">
