--- a/templates/messages/2022-09-16-elul-modal.html
+++ b/templates/messages/2022-09-16-elul-modal.html
@@ -82,10 +82,10 @@
         </span>
     </p>
     <div class="buttons">
-        <a class="button int-en" target="_blank" href="https://sefaria.nationbuilder.com/sustainers_e">
+        <a class="button int-en" target="_blank" href="https://sefaria.nationbuilder.com/supportsefaria_web">
             <span class="int-en"  style="font-weight: bold">DONATE</span>
         </a>
-        <a class="button int-he" target="_blank" href="https://sefaria.nationbuilder.com/sustainers_e">
+        <a class="button int-he" target="_blank" href="https://sefaria.nationbuilder.com/il_whb">
             <span class="int-he">תרמו עכשיו</span>
         </a>
     </div>
