static(team): Team update

--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -201,6 +201,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/yonadav.png' %}" alt="Headshot of Yonadav Leibowitz">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">יונדב ליבוביץ</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">מהנדס תכנה - מתמחה</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/annie.png' %}" alt="Headshot of Annie Lumerman">
                         </div>
                         <div class="teamMemberDetails">
