--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -189,6 +189,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/yonadav.png' %}" alt="Headshot of Yonadav Leibowitz">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Yonadav Leibowitz</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Engineering Intern</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/annie.png' %}" alt="Headshot of Annie Lumerman">
                         </div>
                         <div class="teamMemberDetails">
