static(jobs): Jobs page update #2

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -53,6 +53,17 @@
                 <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/0cb8dd2c3153-junior-content-engineer">Junior Content Engineer</a></div>
             </section>
         </section>
+        <section class="section department englishOnly">
+            <header>
+                <h2 class="anchorable">Marketing and Communications</h2>
+            </header>
+            <section class="jobsListForDepartment">
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/6eed09d525d2-digital-designer">Digital Designer</a></div>
+            </section>
+            <section class="jobsListForDepartment">
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/1c6b3f1978e8-social-media-coordinator">Social Media Coordinator</a></div>
+            </section>
+        </section>
         <!---<section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Learning Team</h2>
