--- a/templates/base.html
+++ b/templates/base.html
@@ -83,8 +83,7 @@
         });
         WebFont.load({
           google: {
-            families: ['Noto Sans Samaritan'],
-            text: 'ࠀࠁࠂࠃࠄࠅࠆࠇࠈࠉࠊࠋࠌࠍࠎࠏࠐࠑࠒࠓࠔࠕ'
+            families: ['Noto Sans Samaritan']
           }
         });
     </script>
