--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -43,6 +43,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/justin.png' %}" alt="Headshot of Justin Goldstein">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">ג'סטין גולדשטיין</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">רכז לענייני לימוד וקהילה</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/yishai.png' %}" alt="Headshot of Yishai Glasner">
                         </div>
                         <div class="teamMemberDetails">
@@ -188,6 +201,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/yonadav.png' %}" alt="Headshot of Yonadav Leibowitz">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">יונדב ליבוביץ</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">מהנדס תכנה - מתמחה</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/annie.png' %}" alt="Headshot of Annie Lumerman">
                         </div>
                         <div class="teamMemberDetails">
@@ -260,7 +286,7 @@
                                 <span class="int-he">ישראל צדוק</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכז תוכן וקשרי חוץ</span>
+                                <span class="int-he">רכז חינוך וקהילה ישראל</span>
                             </div>
                         </div>
                     </div>
@@ -352,6 +378,19 @@
                             </div>
                             <div class="teamTitle">
                                 <span class="int-he">רכזת פיתוח וכתיבת מענקים</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/hadara.png' %}" alt="Headshot of Hadara Steinberg">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">הדרה שטיינברג</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">מנהלת פרוייקטים</span>
                             </div>
                         </div>
                     </div>
@@ -448,16 +487,6 @@
                         <div class="teamMemberDetails">
                             <div class="teamName sans">
                                 <span class="int-he">מיכאל ענגלענדער</span>
-                            </div>
-                            <div class="teamTitle">
-                                <span class="int-he"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="teamBoardMember">
-                        <div class="teamMemberDetails">
-                            <div class="teamName sans">
-                                <span class="int-he">רות קלדרון</span>
                             </div>
                             <div class="teamTitle">
                                 <span class="int-he"></span>
