--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -80,13 +80,28 @@ a, a:hover {
   src: url('/static/fonts/NotoColorEmoji.ttf');
   unicode-range: U+1F1E6-1F1FF;
 }
+@font-face {
+  font-family: 'Meltho';
+  src: url('/static/fonts/SyrCOMBatnan.otf');
+  unicode-range: U+0700-074F;
+}
+@font-face {
+  font-family: 'Noto Sans Samaritan';
+  unicode-range: U+0800-083F;
+}
+@font-face {
+  /*Greek*/
+  font-family: 'Cardo';
+    src: url('/static/fonts/Cardo-Regular.ttf');
+  unicode-range: U+0300-036F, U+0370-03FF, U+1D00-1D7F, U+1DBF, U+1F00-1FFF, U+2126, U+AB65, U+10140-1018F, U+101A0, U+1D200-1D24F;
+}
 :root {
   /* font stacks */
   --english-sans-serif-font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
   --hebrew-sans-serif-font-family: "Heebo", "Roboto", sans-serif;
 
-  --english-serif-font-family: "HebrewInEnglish Serif Font", "adobe-garamond-pro", "Crimson Text", Georgia, "Times New Roman", serif;
-  --hebrew-serif-font-family: "Noto Color Emoji", "EnglishInHebrew Serif Font", "Taamey Frank", "adobe-garamond-pro", "Crimson Text", "Times New Roman", serif;
+  --english-serif-font-family: "Cardo", "Meltho",  "HebrewInEnglish Serif Font", "adobe-garamond-pro", "Crimson Text", Georgia, "Times New Roman", serif, "Noto Sans Samaritan";
+  --hebrew-serif-font-family: "Noto Color Emoji", "EnglishInHebrew Serif Font", "Cardo", "Taamey Frank", "adobe-garamond-pro", "Crimson Text", "Times New Roman", serif;
 
   --serif-h1-font-size: 48px;
   --serif-h2-font-size: 30px;
@@ -5137,6 +5152,13 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
 }
 .segment.enOnly .en{
   display: initial;
+}
+/* 
+This is an attempt to fix dictionary entries in this layout (hebrew continuous) from having the headwords flip to the right instead of left. 
+But not to use a display block directive that might break continuous mode for other English only texts
+ */
+.readerPanel.hebrew.continuous .segment.enOnly .en{
+  unicode-bidi: embed;
 }
 .readerPanel.hebrew .segment.enOnly .sheetSegmentNumber .en{
   display: none;
@@ -12452,9 +12474,6 @@ span.ref-link-color-3 {color: blue}
   height: 18px;
   width: 18px;
   margin-inline-start: 6px;
-}
-.samaritan{
-   font-family: 'Noto Sans Samaritan';
 }
 
 @-webkit-keyframes load5 {
