--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -98,6 +98,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/justin.png' %}" alt="Headshot of Justin Goldstein">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Justin Goldstein</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Learning and Engagement Associate</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/rachel-g.png' %}" alt="Headshot of Rachel Grossman">
                         </div>
                         <div class="teamMemberDetails">
@@ -171,6 +184,19 @@
                             </div>
                             <div class="teamTitle">
                                 <span class="int-en">Junior Software Engineer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/yonadav.png' %}" alt="Headshot of Yonadav Leibowitz">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Yonadav Leibowitz</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Engineering Intern</span>
                             </div>
                         </div>
                     </div>
@@ -293,6 +319,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/hadara.png' %}" alt="Headshot of Hadara Steinberg">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Hadara Steinberg</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Project Manager</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/israel.png' %}" alt="Headshot of Israel Tsadok">
                         </div>
                         <div class="teamMemberDetails">
@@ -300,7 +339,7 @@
                                 <span class="int-en">Israel Tsadok</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Education and Engagement Contractor</span>
+                                <span class="int-en">Education and Engagement Associate (Israel)</span>
                             </div>
                         </div>
                     </div>
@@ -352,7 +391,7 @@
                                 <span class="int-en">Hedva Yechieli</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Education Coordinator Israel</span>
+                                <span class="int-en">Education Coordinator (Israel)</span>
                             </div>
                         </div>
                     </div>
@@ -449,16 +488,6 @@
                         <div class="teamMemberDetails">
                             <div class="teamName">
                                 <span class="int-en">Michael Englander</span>
-                            </div>
-                            <div class="teamTitle">
-                                <span class="int-en"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="teamBoardMember">
-                        <div class="teamMemberDetails">
-                            <div class="teamName">
-                                <span class="int-en">Ruth Calderon</span>
                             </div>
                             <div class="teamTitle">
                                 <span class="int-en"></span>
