--- a/templates/messages/2022-8-10-modal-newsletter-A.html
+++ b/templates/messages/2022-8-10-modal-newsletter-A.html
@@ -130,8 +130,10 @@
                 />
             </span>
 
-            <button class="button small white" onclick=Sefaria.util.subscribeToNbList(document.querySelector('#email-input-en,#email-input-he').value) >
+            <button class="button small white int-en" onclick=Sefaria.util.subscribeToNbList(document.querySelector('#email-input-en').value) >
                 <span class="int-en">Submit</span>
+            </button>
+            <button class="button small white int-he" onclick=Sefaria.util.subscribeToNbList(document.querySelector('#email-input-he').value) >
                 <span class="int-he">רשמו אותי</span>
             </button>
         </div>
