--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,8 @@
         });
         WebFont.load({
           google: {
-            families: ['Noto Sans Samaritan']
+            families: ['Noto Sans Samaritan'],
+            text: 'ࠀࠁࠂࠃࠄࠅࠆࠇࠈࠉࠊࠋࠌࠍࠎࠏࠐࠑࠒࠓࠔࠕ'
           }
         });
     </script>
@@ -147,6 +148,19 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ GOOGLE_TAG_MANAGER_CODE }}"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-B0LMV7FCME"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-B0LMV7FCME', {'debug_mode':true}); //{ 'send_page_view': false, 'debug_mode':true }
+          {#gtag('event', 'page_view', {'our_page_view': 'true'})#}
+          {#gtag('config', 'GA_TRACKING_ID');#}
+
+        </script>
+    <!-- End Google tag -->
     {% endif %}
 
     {% autoescape off %}
