static(modal): Change to language in the newsletter modal

--- a/templates/messages/2022-8-10-modal-newsletter-A.html
+++ b/templates/messages/2022-8-10-modal-newsletter-A.html
@@ -108,7 +108,7 @@
         </h1>
 
         <p>
-                <span class="int-en">Subscribe to Sefaria’s newsletter to get reading recommendations, new text updates, library tips, webinar invites and more delivered to your inbox.
+                <span class="int-en">Subscribe to Sefaria’s newsletter to get new text updates, library tips, webinar invites and more delivered to your inbox.
                 </span>
                 <span class="int-he">הצטרפו לרשימת התפוצה של ספריא וקבלו את כל העדכונים החשובים: החל מכותרים חדשים במאגר, דרך המלצות קריאה, טיפים לשימוש בספריא ועוד המון ערך.
                 </span>
