fix(abtesting): Fixes and tweaks needed for the PR pre deploy.

--- a/templates/elements/loading.html
+++ b/templates/elements/loading.html
@@ -9,7 +9,7 @@
       <br>
       {% endif %}
       <div class="smallText">
-      	<span class="int-he">טעינה...</span>
+      	<span class="int-he">...טעינה</span>
       	<span class="int-en">Loading...</span>
         </div>
     </div>
