static(team page): Team page updates (#1128)
* static(team): Team page update

* static(team): Team page update #2

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -46,6 +46,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/caitlyn.png' %}" alt="Headshot of Caitlyn Cushing">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Caitlyn Cushing</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Development Associate</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/ephraim.png' %}" alt="Headshot of Ephraim Damboritz">
                         </div>
                         <div class="teamMemberDetails">
@@ -223,6 +236,19 @@
                             </div>
                             <div class="teamTitle">
                                 <span class="int-en">Software Engineer</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/francis.png' %}" alt="Headshot of Francis Nataf">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Francis Nataf</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Translation and Research Specialist</span>
                             </div>
                         </div>
                     </div>
