--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -240,6 +240,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/francis.png' %}" alt="Headshot of Francis Nataf">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">יעקב (פרנסיס) נטף</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">מומחה תרגום ומחקר</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/russel.png' %}" alt="Headshot of Russel Neiss">
                         </div>
                         <div class="teamMemberDetails">
@@ -300,6 +313,19 @@
                             </div>
                             <div class="teamTitle">
                                 <span class="int-he">מנהלת אגף תקשורת ושיווק</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/caitlyn.png' %}" alt="Headshot of Caitlyn Cushing">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">קייטלין קושינג</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">רכזת פיתוח</span>
                             </div>
                         </div>
                     </div>
