static(jobs): Add Eng job posting (#1129)

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -45,14 +45,14 @@
             </section>
         </section>--->
 
-        <!---<section class="section department englishOnly">
+        <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Engineering</h2>
             </header>
             <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href=""></a></div>
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/bb9ccfb99b4d-software-engineer">Software Engineer</a></div>
             </section>
-        </section>--->
+        </section>
         <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Marketing and Communications</h2>
