feat(GA4): all and only the changes to move from GTM pushing to the data layer to gtag pushing to the datalayer.

--- a/templates/base.html
+++ b/templates/base.html
@@ -150,12 +150,12 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-LNP9R1SLL3"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ GOOGLE_GTAG }}"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
-          gtag('config', 'G-LNP9R1SLL3', {'debug_mode':true});
+          gtag('config', '{{ GOOGLE_GTAG }}');
         </script>
     <!-- End Google tag -->
     {% endif %}
