--- a/templates/messages/2022-12-26-end-of-year-msg05-banner.html
+++ b/templates/messages/2022-12-26-end-of-year-msg05-banner.html
@@ -1,16 +1,16 @@
-<div id="bannerTextBox">
+<div>
 	<span class="int-en">
 There is only one week left to give this year — please join us in supporting new texts, translations, and tech features in 2023 by making a donation today!
-    </span>
+  <br/>  </span>
     <span class="int-he">
 נותר רק שבוע אחד לתרום בו בשנה הנוכחית – אנא הצטרפו אלינו ועזרו לנו בספריא לתמוך בהוספת מקורות, תרגומים ופיתוחים טכנולוגיים חדשים בשנת 2023.
-    </span>
+  <br/>  </span>
 </div>
-<div id="bannerButtonBox">
-	<a class="button white int-en" href="https://sefaria.nationbuilder.com/supportsefaria_web">
+<div><br/>
+	<a class="button int-en" href="https://sefaria.nationbuilder.com/supportsefaria_web">
         <span>Donate Now</span>
     </a>
-    <a class="button white int-he" href="https://sefaria.nationbuilder.com/il_whb">
+    <a class="button int-he" href="https://sefaria.nationbuilder.com/il_whb">
         <span>לתרומה</span>
     </a>
 </div>
