static: update team page

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -144,7 +144,7 @@
                                 <span class="int-en">Tali Herenstein</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Chief of Staff</span>
+                                <span class="int-en">Chief Strategy Officer</span>
                             </div>
                         </div>
                     </div>
@@ -552,7 +552,7 @@
                         <span class="int-en">If you are interested in supporting Sefaria, please write to <a href="mailto:donate@sefaria.org">donate@sefaria.org</a>.</span>
                     </div>
                 </section>
-                
+
             </div>
         </div>
     </main>
