--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -115,7 +115,7 @@
                                 <span class="int-he">טלי הרנשטיין</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">ראש הסגל</span>
+                                <span class="int-he">סמנכ״ל אסטרטגיה</span>
                             </div>
                         </div>
                     </div>
