--- a/templates/base.html
+++ b/templates/base.html
@@ -227,7 +227,7 @@
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
             gtag('config', '{{ GOOGLE_GTAG }}', {
-              'user_id': DJANGO_VARS.props._uid
+              'user_id': DJANGO_VARS.props ? DJANGO_VARS.props._uid : null
             });
           </script>
       <!-- End Google tag -->
